[gd_scene load_steps=2 format=3 uid="uid://ccomphud001"]

[ext_resource type="Script" path="res://ui/hud/companion_hud.gd" id="1_hud"]

[node name="CompanionHUD" type="Control"]
anchors_preset = 0
offset_left = 4.0
offset_top = 24.0
offset_right = 74.0
offset_bottom = 114.0
script = ExtResource("1_hud")

[node name="MomiPanel" type="Control" parent="."]
layout_mode = 0
offset_right = 66.0
offset_bottom = 26.0

[node name="Background" type="ColorRect" parent="MomiPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="NameLabel" type="Label" parent="MomiPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 9.0
theme_override_font_sizes/font_size = 6
text = "Momi"

[node name="HealthBar" type="ProgressBar" parent="MomiPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 16.0
theme_override_styles/fill = SubResource("StyleBoxFlat_health")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
value = 100.0
show_percentage = false

[node name="MeterBar" type="ProgressBar" parent="MomiPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 23.0
modulate = Color(1, 0.8, 0.2, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_meter")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
value = 0.0
show_percentage = false

[node name="KOOverlay" type="Label" parent="MomiPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 8
text = "KO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CinnamonPanel" type="Control" parent="."]
layout_mode = 0
offset_top = 28.0
offset_right = 66.0
offset_bottom = 54.0

[node name="Background" type="ColorRect" parent="CinnamonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="NameLabel" type="Label" parent="CinnamonPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 9.0
theme_override_font_sizes/font_size = 6
text = "Cinnamon"

[node name="HealthBar" type="ProgressBar" parent="CinnamonPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 16.0
theme_override_styles/fill = SubResource("StyleBoxFlat_health")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
value = 100.0
show_percentage = false

[node name="MeterBar" type="ProgressBar" parent="CinnamonPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 23.0
modulate = Color(1, 0.3, 0.1, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_meter")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
value = 0.0
show_percentage = false

[node name="KOOverlay" type="Label" parent="CinnamonPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 8
text = "KO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhiloPanel" type="Control" parent="."]
layout_mode = 0
offset_top = 56.0
offset_right = 66.0
offset_bottom = 82.0

[node name="Background" type="ColorRect" parent="PhiloPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="NameLabel" type="Label" parent="PhiloPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 9.0
theme_override_font_sizes/font_size = 6
text = "Philo"

[node name="HealthBar" type="ProgressBar" parent="PhiloPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 16.0
theme_override_styles/fill = SubResource("StyleBoxFlat_health")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
value = 100.0
show_percentage = false

[node name="MeterBar" type="ProgressBar" parent="PhiloPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 23.0
modulate = Color(0.3, 0.8, 1, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_meter")
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
value = 100.0
show_percentage = false

[node name="KOOverlay" type="Label" parent="PhiloPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 8
text = "KO"
horizontal_alignment = 1
vertical_alignment = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health"]
bg_color = Color(0.8, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_meter"]
bg_color = Color(0.9, 0.9, 0.3, 1)
